--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -30,6 +30,10 @@ pydantic-settings==2.6.0
 python-dotenv==1.0.1
 pyyaml==6.0.2
 
+# PDF Generation
+reportlab==4.2.5
+markdown==3.7
+
 # Testing
 pytest==8.3.4
 pytest-asyncio==0.25.2
