feat: 恢复文章引用功能 - 在分析报告中强制引用原文
问题：
- 上次prompt大改后，LLM不再在报告中引用具体文章
- 读者无法追溯信息来源，降低了报告可信度

解决方案：

1. **系统提示词增强** (base.yaml)
   - 新增"文章引用规范"章节（第5节）
   - 明确要求使用 `[数字]` 格式标注来源
   - 提供详细的引用示例和使用场景
   - 强调可追溯性和引用必要性

2. **用户提示词补充** (adapter.py)
   - 在输出格式要求中添加"引用要求"
   - 再次强调引用格式和必要性
   - 与信息源列表的 [i] 编号对应

3. **前端支持已就绪** (AnalysisMarkdown.tsx)
   - 前端已有完整的引用解析逻辑
   - 自动识别 `[1]`、`[2]` 等格式
   - 渲染为蓝色可点击超链接
   - 鼠标悬停显示文章标题和来源
   - 点击跳转到原文链接

引用格式：
- 单个引用: [1]
- 多个引用: [1][2][3]
- 位置: 句末或段落末

示例：
"OpenAI发布了新模型，性能提升显著[1]"
"多家媒体报道了这一事件[5][8][12]"

效果：
- 提高报告可信度和专业性
- 读者可以快速验证信息来源
- 支持深度阅读和事实核查

--- a/backend/prompts/base.yaml
+++ b/backend/prompts/base.yaml
@@ -33,6 +33,17 @@ system_prompt_base: |
   - **表格替代方案**：如需对比多个维度，使用层级列表或分段描述
   - **控制输出长度**：避免重复、冗余内容，保持输出紧凑高效
   - **完整性优先**：确保所有章节完整输出，不中途截断
+  
+  ## 5. 文章引用规范（必须遵守）
+  - **强制引用**：当提到具体事实、数据、观点或事件时，必须使用 `[数字]` 格式标注信息来源
+  - **引用格式**：使用方括号加数字，例如 `[1]`、`[2]`、`[15]`，对应"待分析信息源"列表中的编号
+  - **引用位置**：在相关内容的句子或段落末尾添加引用，可以是单个 `[1]` 或多个 `[1][2][3]`
+  - **引用示例**：
+    - "OpenAI发布了新的GPT-5模型，性能提升显著[1]"
+    - "根据市场数据显示，该公司Q4营收同比增长35%[3]"
+    - "多家媒体报道了这一事件[5][8][12]"
+  - **可追溯性**：确保读者能够通过引用编号追溯到原始信息源
+  - **引用必要性**：分析报告中的关键信息点必须有引用支持，不要凭空推测
 
 user_prompt_template: |
   请分析以下关于 `{{domain}}` 领域的 `{{article_count}}` 条信息。
