--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.469.0",
+    "mermaid": "^11.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.1.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
