chore: 添加tts_prompts到gitignore - 独立的TTS工具不提交到主项目

--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,11 @@ ehthumbs.db
 Desktop.ini
 
 # ============================================================================
+# TTS播报稿工具（独立项目，不提交）
+# ============================================================================
+tts_prompts/
+
+# ============================================================================
 # 保留的文件（强制跟踪）
 # ============================================================================
 !backend/data/.gitkeep
