fix: gaming prompt 折扣信息必须包含原价和现价

--- a/backend/prompts/templates/gaming.yaml
+++ b/backend/prompts/templates/gaming.yaml
@@ -78,6 +78,7 @@ report_format_addition: |
   
   每个推荐包含：
   - **游戏名称** + **平台**（Steam/PS5/Xbox/Switch）+ **价格/模式**（买断/F2P/订阅）
+  - **折扣信息**（如有促销）：必须包含原价、现价、折扣力度，例如"原价298元，现价149元，5折"
   - **一句话推荐**：为什么必玩？
   - **核心玩法**：是什么类型？怎么玩？
   - **适合人群**：
@@ -256,6 +257,7 @@ report_format_addition: |
   #### 平台竞争
   - Steam、Epic、主机平台的动态
   - 独占游戏、限时免费、促销活动
+  - **促销折扣必须写明**：原价、现价、折扣力度（如"原价298元，现价99元，史低3.3折"）
   
   #### 技术趋势
   - 新技术在游戏中的应用（AI、光追、VR等）
@@ -321,6 +323,7 @@ user_prompt_template: |
   - ✅ **综合评级**：🔥必玩 / 👍值得关注 / 😐观望 / ⚠️避坑
   - ✅ **玩家视角**：从玩家角度评价，不是媒体评测视角
   - ✅ **PC主机为主**：侧重PC（Steam）和主机游戏，3A大作和独立精品
+  - ✅ **折扣信息完整**：促销游戏必须写明原价、现价、折扣力度（如"原价298元，现价149元，5折"），只写折扣百分比没有意义
   
   ### 赛事追踪必须做到
   - ✅ **主流项目聚焦**：LOL、DOTA2、CS2、王者荣耀、和平精英、炉石等主流电竞
