fix: developer prompt 聚焦AI领域，简化前后端技术细节

--- a/backend/prompts/templates/developer.yaml
+++ b/backend/prompts/templates/developer.yaml
@@ -113,11 +113,10 @@ report_format_addition: |
   客观呈现开发者社区的最新动态，不含主观判断。
   
   ### 技术栈动态
+  - **AI/LLM技术**：大模型、Agent框架、AI应用开发、Prompt工程
   - **编程语言**：新版本发布、语言特性更新、采用趋势
-  - **前端生态**：框架更新、工具发布、生态变化
-  - **后端技术**：框架版本、架构模式、数据库技术
-  - **云原生**：容器、K8s、Serverless、基础设施即代码
-  - **开发工具**：IDE、编辑器、AI辅助工具
+  - **云原生与基础设施**：容器、K8s、Serverless、DevOps工具
+  - **开发工具**：IDE、编辑器、AI辅助编程工具（Copilot、Cursor等）
   
   ### 开源项目速递
   - **明星项目**：GitHub热门项目、快速增长的新项目
@@ -132,9 +131,9 @@ report_format_addition: |
   - **争议话题**：技术选型争论、理念冲突
   
   ### 学习资源推荐
-  - **教程文档**：高质量的入门教程、官方文档更新
-  - **课程书籍**：值得学习的在线课程、技术书籍
-  - **实战项目**：开源项目推荐、练手项目idea
+  - **AI相关教程**：AI/LLM/Agent相关的高质量教程、官方文档更新
+  - **AI课程书籍**：AI领域值得学习的在线课程、技术书籍
+  - **AI实战项目**：AI相关的开源项目推荐、练手项目idea
   
   ---
   
