--- a/backend/prompts/templates/developer.yaml
+++ b/backend/prompts/templates/developer.yaml
@@ -76,10 +76,11 @@ system_prompt_addition: |
   - **例子**：刚出的实验性框架、个人开发者的新项目
   
   ### 🔧 趁手的工具（Tool）
-  - **定义**：成熟可靠、适合生产使用、有明确的适用场景
-  - **特征**：文档完善、社区活跃、最佳实践清晰、工具链完整
-  - **建议**：可以在生产环境使用，适合大多数常见场景
-  - **例子**：成熟的框架、被广泛采用的工具
+  - **定义**：近1-2年出现的新工具，已经相对成熟可用，但还没有大规模普及
+  - **特征**：解决了新问题或比老方案更好用、文档基本完善、社区在快速成长
+  - **建议**：值得关注和尝试，可能成为你的新生产力工具
+  - **例子**：新出的AI编程工具、新的构建工具、新的开发框架
+  - **不要推荐**：Docker、Kubernetes、TypeScript、Spring Boot、React、Vue等已经大规模普及多年的技术，这些是"常识"而非"新发现"
   
   ### 🏗️ 未来的基础设施（Infrastructure）
   - **定义**：正在或即将成为行业标准，长期投资价值高
@@ -153,10 +154,11 @@ report_format_addition: |
   
   #### 🔧 趁手的工具（Tool）
   - **项目名称**
-  - **为什么是工具**：成熟稳定、文档完善、社区活跃
+  - **为什么值得关注**：近期出现、解决了什么新问题、比老方案好在哪里
   - **适用场景**：适合什么样的项目？（个人项目/中型项目/企业项目）
   - **学习建议**：值得深入学习吗？学习路径是什么？
-  - **建议**：可以在生产环境使用、推荐学习
+  - **建议**：值得尝试、可能成为新的生产力工具
+  - **注意**：不要推荐Docker、K8s、TypeScript等已经普及多年的"常识"技术
   
   #### 🏗️ 未来的基础设施（Infrastructure）
   - **项目名称**
@@ -373,7 +375,7 @@ user_prompt_template: |
   
   #### 技术/工具三分类（必须）
   - 🧸 **玩具**：有趣但不成熟，适合学习探索，不适合生产
-  - 🔧 **趁手的工具**：成熟可靠，适合生产使用
+  - 🔧 **趁手的工具**：近1-2年出现的新工具，已可用但还没普及，值得关注（不要推荐Docker、TypeScript等早已普及的技术）
   - 🏗️ **未来的基础设施**：长期投资价值高，值得深入学习
   
   #### 基础维度评估
