fix: 趁手的工具改为近期出现，去掉具体时间限制

--- a/backend/prompts/templates/developer.yaml
+++ b/backend/prompts/templates/developer.yaml
@@ -76,7 +76,7 @@ system_prompt_addition: |
   - **例子**：刚出的实验性框架、个人开发者的新项目
   
   ### 🔧 趁手的工具（Tool）
-  - **定义**：近1-2年出现的新工具，已经相对成熟可用，但还没有大规模普及
+  - **定义**：近期出现的新工具，已经可用但还没大规模普及
   - **特征**：解决了新问题或比老方案更好用、文档基本完善、社区在快速成长
   - **建议**：值得关注和尝试，可能成为你的新生产力工具
   - **例子**：新出的AI编程工具、新的构建工具、新的开发框架
@@ -375,7 +375,7 @@ user_prompt_template: |
   
   #### 技术/工具三分类（必须）
   - 🧸 **玩具**：有趣但不成熟，适合学习探索，不适合生产
-  - 🔧 **趁手的工具**：近1-2年出现的新工具，已可用但还没普及，值得关注（不要推荐Docker、TypeScript等早已普及的技术）
+  - 🔧 **趁手的工具**：近期出现的新工具，已可用但还没普及，值得关注（不要推荐Docker、TypeScript等早已普及的技术）
   - 🏗️ **未来的基础设施**：长期投资价值高，值得深入学习
   
   #### 基础维度评估
