fix: 技术选型指南只评估近期新技术，不评估成熟多年的语言和框架

--- a/backend/prompts/templates/developer.yaml
+++ b/backend/prompts/templates/developer.yaml
@@ -169,7 +169,9 @@ report_format_addition: |
   
   ### 技术选型指南（详细评估）
   
-  针对重要技术/工具，提供详细的选型评估：
+  针对**近期出现的新技术/工具**，提供详细的选型评估。
+  
+  **注意**：不要评估Rust、Go、Python、Java等成熟多年的编程语言，也不要评估React、Vue、Spring等早已普及的框架。只评估近期新出现、开发者可能还不熟悉的技术。
   
   #### 基础维度评估
   
