fix: 学习地图重点关注上升和下降趋势，稳定成熟的技术简单带过

--- a/backend/prompts/templates/developer.yaml
+++ b/backend/prompts/templates/developer.yaml
@@ -263,21 +263,21 @@ report_format_addition: |
   
   ### 技术趋势判断
   
-  #### 上升趋势（值得投资）
+  重点关注**上升趋势**和**下降趋势**，稳定成熟的技术简单带过即可。
+  
+  #### 上升趋势（重点关注）
   - **技术名称**
   - **为什么上升**：社区增长、企业采用、生态完善
   - **学习建议**：现在开始学习、长期投资价值高
   - **职业价值**：对求职/涨薪的帮助
   
-  #### 稳定成熟（主流技能）
-  - **技术名称**
-  - **为什么稳定**：广泛采用、生态成熟
-  - **学习建议**：必备技能、继续深耕
-  
-  #### 下降趋势（谨慎投入）
+  #### 下降趋势（重点关注）
   - **技术名称**
   - **为什么下降**：被替代、社区萎缩
   - **建议**：不建议新项目采用、考虑迁移
+  
+  #### 稳定成熟（简单带过）
+  - 一句话列出即可，不需要详细展开
   
   ### 学习路径推荐
   
