fix: 修复引用链接顺序错乱和游戏价格显示问题
1. 引用链接顺序错乱修复：
   - 为 analysis_articles 表添加 position 字段
   - 保存时记录文章顺序
   - 查询时按 position 排序，确保 [1][2][3] 与正确的文章对应

2. 游戏折扣价格显示增强：
   - 强化 gaming.yaml 中的价格显示要求
   - 明确要求写明"原价 → 现价 → 折扣力度"
   - 添加禁止规则：不允许只写折扣百分比而不写具体金额

--- a/backend/prompts/templates/gaming.yaml
+++ b/backend/prompts/templates/gaming.yaml
@@ -78,7 +78,13 @@ report_format_addition: |
   
   每个推荐包含：
   - **游戏名称** + **平台**（Steam/PS5/Xbox/Switch）+ **价格/模式**（买断/F2P/订阅）
-  - **折扣信息**（如有促销）：必须包含原价、现价、折扣力度，例如"原价298元，现价149元，5折"
+  - **💰 价格信息**（重要！必须写明）：
+    - 原价游戏：写明当前售价，如"售价 298 元"
+    - 促销游戏：必须写明**原价 → 现价 → 折扣力度**，格式示例：
+      - "原价 298 元 → 现价 149 元（5折）"
+      - "原价 ¥398 → 史低 ¥99（2.5折）"
+      - "限时特惠：原价 $59.99 → $29.99（-50%）"
+    - ⚠️ 禁止只写"打折中"或"5折"而不写具体金额！玩家需要知道实际要花多少钱
   - **一句话推荐**：为什么必玩？
   - **核心玩法**：是什么类型？怎么玩？
   - **适合人群**：
@@ -257,7 +263,9 @@ report_format_addition: |
   #### 平台竞争
   - Steam、Epic、主机平台的动态
   - 独占游戏、限时免费、促销活动
-  - **促销折扣必须写明**：原价、现价、折扣力度（如"原价298元，现价99元，史低3.3折"）
+  - **💰 促销折扣必须写明完整价格**：
+    - 格式："《游戏名》原价 ¥298 → 现价 ¥99（史低3.3折）"
+    - ⚠️ 禁止只写"打7折"而不写具体金额
   
   #### 技术趋势
   - 新技术在游戏中的应用（AI、光追、VR等）
@@ -323,7 +331,11 @@ user_prompt_template: |
   - ✅ **综合评级**：🔥必玩 / 👍值得关注 / 😐观望 / ⚠️避坑
   - ✅ **玩家视角**：从玩家角度评价，不是媒体评测视角
   - ✅ **PC主机为主**：侧重PC（Steam）和主机游戏，3A大作和独立精品
-  - ✅ **折扣信息完整**：促销游戏必须写明原价、现价、折扣力度（如"原价298元，现价149元，5折"），只写折扣百分比没有意义
+  - ✅ **💰 价格信息完整**：
+    - 所有推荐游戏必须写明当前售价
+    - 促销游戏必须写明：原价 → 现价 → 折扣力度
+    - 示例："原价 ¥298 → 现价 ¥149（5折）"
+    - ❌ 禁止只写"打折"或"5折"而不写具体金额
   
   ### 赛事追踪必须做到
   - ✅ **主流项目聚焦**：LOL、DOTA2、CS2、王者荣耀、和平精英、炉石等主流电竞
